--- a/src/step.html
+++ b/src/step.html
@@ -1,2 +1,2 @@
-<section ng-show="selected" ng-class="{current: selected, done: completed}" class="step" ng-transclude>
+<section ng-if="selected" ng-class="{current: selected, done: completed}" class="step" ng-transclude>
 </section>
